syntax = "proto3";

import "./division.proto";
import "./faculty.proto";

package grabber;

service StatisticsService {
    rpc ListDivisionsStatistics (ListStatisticsRequest) returns (ListStatisticsResponse) {}
    rpc ListFacultiesStatistics (ListStatisticsRequest) returns (ListStatisticsResponse) {}
}

message Statistics {
    string type = 1; // statistics
    string id = 2;
    message Attributes {
        int32 all = 1;
        int32 noCheckpoints = 2;
        int32 noRatings = 3 ;
        int32 notClosed = 4;
        int32 blank = 5;
    }
    Attributes attributes = 3;
    message Relationships {
        DivisionRelationship division = 1;
        FacultyRelationship faculty = 2;
    }
    Relationships relationships = 4;
}

message ListStatisticsRequest {
    string academy_id = 1;
    string year = 2;
    int32 semester = 3;
}

message ListStatisticsResponse {
    repeated Statistics data = 1;
    message Included {
        Division division = 1;
        Faculty faculty = 2;
    }
    repeated Faculty included = 14; // TODO: !
}
